--- a/.github/workflows/buildLinux.yml
+++ b/.github/workflows/buildLinux.yml
@@ -11,8 +11,9 @@ jobs:
     runs-on: self-hosted
     
     steps:
-    - uses: actions/checkout@master
-    #- uses: openrndr/setup-opengl@v1.1
+    - name: Run Tests
+      run: |
+        git pull
     - name: Build Everything
       run: |
         dotnet --info
