Linux Build Workflow Attempt

--- a/.github/workflows/buildLinux.yml
+++ b/.github/workflows/buildLinux.yml
@@ -11,16 +11,13 @@ jobs:
     runs-on: self-hosted
     
     steps:
-    - name: Run Tests
+    - name: Pull, Build, Run Tests
       run: |
+        pwd
         git pull
-    - name: Build Everything
-      run: |
-        dotnet --info
         dotnet publish Tests -c DebugUnix64 -r linux-x64 -o Tests/bin/linux --self-contained true
-    #- name: Run Tests
-    #  run: |
-    #    LD_LIBRARY_PATH=mesa-18.2.3/usr/local/lib/x86_64-linux-gnu GALLIUM_DRIVER=swr xvfb-run sudo ./Tests/bin/linux/Tests
+        cd ./Tests/bin/linux
+        ./Tests
     - name: Upload Test Artifact
       if: always()
       uses: actions/upload-artifact@master
