--- a/Emotion.Tools/Emotion.Tools.csproj
+++ b/Emotion.Tools/Emotion.Tools.csproj
@@ -44,6 +44,9 @@
     <None Update="Assets\Sounds\runawe.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Assets\SourceCodePro-Regular.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Assets\test.tmx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
