[UI] Added a new UIScrollBar which acts more like a scrollbar, and renamed the old UIScrollbar to UISlider

--- a/Emotion/Emotion.csproj
+++ b/Emotion/Emotion.csproj
@@ -186,4 +186,9 @@
     <EmbeddedResource Include="Assets\Shaders\SSAA.frag" />
     <EmbeddedResource Include="Assets\Shaders\SSAA.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Update="UI\UIScrollbar.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
+  </ItemGroup>
 </Project>
