sdf build experiment and font parse simplification

--- a/Emotion.ExecTest/Emotion.ExecTest.csproj
+++ b/Emotion.ExecTest/Emotion.ExecTest.csproj
@@ -7,11 +7,47 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Assets\linetest.frag" />
+    <None Remove="Assets\linetest.vert" />
+    <None Remove="Assets\linetest.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Assets\linetest.frag" />
+    <EmbeddedResource Include="Assets\linetest.xml" />
+    <EmbeddedResource Include="Assets\linetest.vert" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Emotion\Emotion.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <None Update="Assets\spritestack-test.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Assets\Ubuntu\Ubuntu-Bold.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Assets\Ubuntu\Ubuntu-BoldItalic.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Assets\Ubuntu\Ubuntu-Italic.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Assets\Ubuntu\Ubuntu-Light.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Assets\Ubuntu\Ubuntu-LightItalic.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Assets\Ubuntu\Ubuntu-Medium.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Assets\Ubuntu\Ubuntu-MediumItalic.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Assets\Ubuntu\Ubuntu-Regular.ttf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
