--- a/Emotion/Emotion.csproj
+++ b/Emotion/Emotion.csproj
@@ -45,9 +45,11 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
-    <None Remove="Assets\FontShaders\AstiopinSDF.frag" />
-    <None Remove="Assets\FontShaders\AstiopinSDF.vert" />
-    <None Remove="Assets\FontShaders\AstiopinSDF.xml" />
+    <Compile Remove="Graphics\Text\CommonGlyphRendererHelpers.cs" />
+    <Compile Remove="Graphics\Text\EmotionGlyphRenderer.cs" />
+    <Compile Remove="Graphics\Text\StbGlyphRenderer.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <None Remove="Assets\FontShaders\GenerateSDF.frag" />
     <None Remove="Assets\FontShaders\GenerateSDF.xml" />
     <None Remove="Assets\FontShaders\GlyphRenderFill.frag" />
@@ -56,8 +58,6 @@
     <None Remove="Assets\FontShaders\GlyphRenderLine.frag" />
     <None Remove="Assets\FontShaders\GlyphRenderLine.vert" />
     <None Remove="Assets\FontShaders\GlyphRenderLine.xml" />
-    <None Remove="Assets\FontShaders\NewSDF.frag" />
-    <None Remove="Assets\FontShaders\NewSDF.xml" />
     <None Remove="Assets\FontShaders\SDF.frag" />
     <None Remove="Assets\FontShaders\SDF.xml" />
     <None Remove="Assets\FontShaders\VertColorNoDiscard.frag" />
@@ -132,21 +132,6 @@
     <Compile Remove="Platform\Implementation\EglAngle\**\*.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Assets\FontShaders\NewSDF.frag">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Assets\FontShaders\NewSDF.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Assets\FontShaders\AstiopinSDF.frag">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Assets\FontShaders\AstiopinSDF.vert">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Assets\FontShaders\AstiopinSDF.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
     <EmbeddedResource Include="Assets\FontShaders\GenerateSDF.frag">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </EmbeddedResource>
@@ -217,6 +202,11 @@
     <EmbeddedResource Include="Assets\Shaders\GetTextureSize.c" />
     <EmbeddedResource Include="Assets\Shaders\SSAA.frag" />
     <EmbeddedResource Include="Assets\Shaders\SSAA.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Graphics\Text\CommonGlyphRendererHelpers.cs" />
+    <None Include="Graphics\Text\EmotionGlyphRenderer.cs" />
+    <None Include="Graphics\Text\StbGlyphRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="UI\UIScrollbar.cs">
