--- a/Emotion/Emotion.csproj
+++ b/Emotion/Emotion.csproj
@@ -15,7 +15,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DefineConstants>TRACE;ANGLE, MESA</DefineConstants>
+    <DefineConstants>TRACE;ANGLE; MESA</DefineConstants>
     <DebugType>full</DebugType>
     <DebugSymbols>true</DebugSymbols>
     <DocumentationFile></DocumentationFile>
@@ -44,11 +44,6 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
-  <ItemGroup>
-    <Compile Remove="Graphics\Text\CommonGlyphRendererHelpers.cs" />
-    <Compile Remove="Graphics\Text\EmotionGlyphRenderer.cs" />
-    <Compile Remove="Graphics\Text\StbGlyphRenderer.cs" />
-  </ItemGroup>
   <ItemGroup>
     <None Remove="Assets\FontShaders\GenerateSDF.frag" />
     <None Remove="Assets\FontShaders\GenerateSDF.xml" />
@@ -202,11 +197,6 @@
     <EmbeddedResource Include="Assets\Shaders\GetTextureSize.c" />
     <EmbeddedResource Include="Assets\Shaders\SSAA.frag" />
     <EmbeddedResource Include="Assets\Shaders\SSAA.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Graphics\Text\CommonGlyphRendererHelpers.cs" />
-    <None Include="Graphics\Text\EmotionGlyphRenderer.cs" />
-    <None Include="Graphics\Text\StbGlyphRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="UI\UIScrollbar.cs">
