[Steam] Cleanup of steam plugin, still not functional. Added win64 library to repo

--- a/Emotion.Plugins.Steamworks/Emotion.Plugins.Steamworks.csproj
+++ b/Emotion.Plugins.Steamworks/Emotion.Plugins.Steamworks.csproj
@@ -9,4 +9,10 @@
     <ProjectReference Include="..\Emotion\Emotion.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="AssetsNativeLibs\Steam\win64\steam_api64.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
