--- a/.github/workflows/buildWindows.yml
+++ b/.github/workflows/buildWindows.yml
@@ -9,6 +9,12 @@ jobs:
     
     steps:
     - uses: actions/checkout@master
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: | 
+          5.x.x
+          7.x.x
     - name: Build Everything
       run: |
         dotnet build
