[ExecTest] ExecTest now shows a 3D example, added InfiniteGrid class

--- a/Emotion.ExecTest/Emotion.ExecTest.csproj
+++ b/Emotion.ExecTest/Emotion.ExecTest.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Emotion\Emotion.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Assets\" />
+  </ItemGroup>
+
 </Project>
