--- a/Emotion.Droid.ExecTest/Emotion.Droid.ExecTest.csproj
+++ b/Emotion.Droid.ExecTest/Emotion.Droid.ExecTest.csproj
@@ -10,15 +10,10 @@
     <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
   </PropertyGroup>
   <ItemGroup>
-    <None Remove="Assets\logoAlpha.png" />
+    <None Remove="Assets\Guide.txt" />
     <None Remove="Resources\logoAlpha.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Emotion.Droid\Emotion.Droid.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidAsset Update="Assets\logoAlpha.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </AndroidAsset>
   </ItemGroup>
 </Project>
