--- a/Emotion/Emotion.csproj
+++ b/Emotion/Emotion.csproj
@@ -16,7 +16,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DefineConstants>TRACE;ANGLE;MESA;</DefineConstants>
+    <DefineConstants>TRACE;ANGLE;MESA;ASSIMP;</DefineConstants>
     <DebugType>portable</DebugType>
     <DebugSymbols>true</DebugSymbols>
     <DocumentationFile></DocumentationFile>
@@ -145,6 +145,9 @@
   </ItemGroup>
   <ItemGroup Condition="!$(DefineConstants.Contains('ANGLE'))">
     <Compile Remove="Platform\Implementation\EglAngle\**\*.cs" />
+  </ItemGroup> 
+  <ItemGroup Condition="!$(DefineConstants.Contains('ASSIMP'))">
+    <Compile Remove="IO\Assimp\**\*.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Assets\FontShaders\GenerateSDF.frag">
@@ -227,6 +230,9 @@
   <ItemGroup>
     <None Include="Testing\Templates\EmptyTestSceneTemplate.cs" />
     <None Include="Testing\Templates\EmptyTestTemplateClass.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Silk.NET.Assimp" Version="2.17.1" Condition="$(DefineConstants.Contains('ASSIMP'))" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="UI\UIScrollbar.cs">
