--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ TestResults
 packages/*
 *.nupkg
 EmotionCore/Emotion.targets
+Emotion.ExecTest/Assets/test/*
 
 # Soul
 Logs
@@ -46,6 +47,10 @@ Logs
 # Emotion Games
 HealerGame
 ElectricSleep
+MoS
+DetectiveGame
+LLZ
+SM
 
 # Other
 *.DotSettings.user
