--- a/Emotion/Emotion.csproj
+++ b/Emotion/Emotion.csproj
@@ -16,7 +16,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DefineConstants>TRACE;ANGLE;MESA;ASSIMP;</DefineConstants>
+    <DefineConstants>TRACE;ANGLE;MESA;ASSIMP;MORE_IMAGE_TYPES;</DefineConstants>
     <DebugType>portable</DebugType>
     <DebugSymbols>true</DebugSymbols>
     <DocumentationFile></DocumentationFile>
@@ -233,6 +233,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Silk.NET.Assimp" Version="2.17.1" Condition="$(DefineConstants.Contains('ASSIMP'))" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.0.1" Condition="$(DefineConstants.Contains('MORE_IMAGE_TYPES'))" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="UI\UIScrollbar.cs">
