--- a/.github/workflows/buildWindows.yml
+++ b/.github/workflows/buildWindows.yml
@@ -17,10 +17,10 @@ jobs:
           7.x.x
     - name: Build Everything
       run: |
-        dotnet build
+        dotnet build -c Autobuild
     - name: Run Tests
       run: |
-        cd .\Tests\bin\Debug\net7.0
+        cd .\Tests\bin\Release\net7.0
         ls .
         .\Tests.exe
     - name: Upload Test Artifact
