[World] Map query refactor, benchmarks, and new possibilities

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -35,6 +35,7 @@
     <Compile Remove="Assets\Scripts\CustomMainArgsScript.cs" />
     <Compile Remove="Assets\Scripts\CustomMainScript.cs" />
     <Compile Remove="Assets\Scripts\MainScript.cs" />
+    <Compile Remove="Classes\ScriptingTest.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -59,10 +60,10 @@
     <None Include="Assets\Scripts\MainScript.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="Classes\ScriptingTest.cs" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Emotion.Plugins.CSharpScripting\Emotion.Plugins.CSharpScripting.csproj" />
     <ProjectReference Include="..\Emotion.Test\Emotion.Test.csproj" />
   </ItemGroup>
 
